# projec

./: dtsc5501.py  main.py  pyproject.toml
dtsc5502/: __init__.py
dtsc5502/probabilities/: __init__.py  functions.py
dtsc5502/statistics/: __init__.py  descriptive.py
dtsc5502/version/: __init__.py
